--- a/salesubscription-service/src/main/resources/application.properties
+++ b/salesubscription-service/src/main/resources/application.properties
@@ -3,13 +3,13 @@ spring.application.name=subscription-service
 #spring.datasource.url = jdbc:mysql://mysqldb/employeedetails?useSSL=false
 spring.datasource.url = jdbc:mysql://localhost:3306/subscription?useSSL=false
 spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.password = admin
 
 #`hibernate_sequence' doesn't exist
 spring.jpa.hibernate.use-new-id-generator-mappings=false
 
 # drop n create table, good for testing, comment this in production
-#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
