--- a/salesubscription-service/src/main/resources/application.properties
+++ b/salesubscription-service/src/main/resources/application.properties
@@ -1,15 +1,19 @@
 spring.application.name=subscription-service
 ## MySQL
 #spring.datasource.url = jdbc:mysql://mysqldb/employeedetails?useSSL=false
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/subscription?useSSL=false
 spring.datasource.username = root
 spring.datasource.password = admin
 
 #`hibernate_sequence' doesn't exist
-spring.jpa.hibernate.use-new-id-generator-mappings=false
+#spring.jpa.hibernate.use-new-id-generator-mappings=false
 
 # drop n create table, good for testing, comment this in production
-spring.jpa.hibernate.ddl-auto=update
+
+
+#spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto=update
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
