--- a/salesubscription-service/src/main/resources/application.properties
+++ b/salesubscription-service/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=subscription-service
 #spring.datasource.url = jdbc:mysql://mysqldb/employeedetails?useSSL=false
 spring.datasource.url = jdbc:mysql://localhost:3306/subscription?useSSL=false
 spring.datasource.username = root
-spring.datasource.password = admin
+spring.datasource.password = root
 
 #`hibernate_sequence' doesn't exist
 spring.jpa.hibernate.use-new-id-generator-mappings=false
